--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-lg fixed-top">
       <div class="container">
         <img src="LenteraJiwa.png" alt="Logo" width="100" height="94" class="d-inline-block align-text-top" />
-        <a class="navbar-brand" href="#">Yusak Ilyasa</a>
+        <a class="navbar-brand" href="#">YusakIlyasa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#galery">Galery</a>
+              <a class="nav-link" href="#galery">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -67,10 +67,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit commodi, odio dolore iste aut earum beatae! Perspiciatis atque cupiditate rerum.</p>
-          </div>
-          <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio facilis, nihil quos sapiente accusamus tenetur, nulla aliquid quod veritatis rem quis veniam inventore at ipsam.</p>
+            <p>
+              I'm Yusak Ilyasa, Welcome to my Portfolio. I invite you to Explore my site to get a better understanding of my specialties, Technique and Professional Experience. What you'll find below is a Combination of commissioned Work,
+              as well as some Personal Passion Projects, and Artworks of my own.
+            </p>
           </div>
         </div>
       </div>
@@ -84,52 +84,52 @@
     </section>
     <!-- Akhir About -->
 
-    <!-- Galery -->
+    <!-- Project -->
     <sections id="galery">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col mb-4">
-            <h2>Galery</h2>
+            <h2>Projects</h2>
           </div>
         </div>
         <div class="row justify-content-evenly">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img Projects.jpg" class="card-img-top" alt="Projects1" />
+              <img src="img 0.jpeg" class="card-img-top" alt="Projects1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text text-center">Portofolio Web</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img Projects2.jpg" class="card-img-top" alt="Projects2" />
+              <img src="img 1.jpeg" class="card-img-top" alt="Projects2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text text-center">Web Biota Laut</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img Projects2.jpg" class="card-img-top" alt="Projects3" />
+              <img src="img 2.jpeg" class="card-img-top" alt="Projects3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text text-center">cATM Java</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img Projects4.jpg" class="card-img-top" alt="Projects4" />
+              <img src="img 3.jpeg" class="card-img-top" alt="Projects4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text text text-center">Web Sorum Motor</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img Projects4.jpg" class="card-img-top" alt="Projects5" />
+              <img src="img 4.jpeg" class="card-img-top" alt="Projects5" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text text-center">Sorum Motor Web</p>
               </div>
             </div>
           </div>
